# screencontrol

./: .env.example  .env.production.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.production.yml  docker-compose.yml
.github/workflows/: agent-build.yml  docker-build.yml
docker/: Dockerfile.relay  Dockerfile.server  Dockerfile.web
docs/: rustdesk_deep_dive.md
proto/: messages.proto
scripts/: build-agents.sh
sdk/: MacOSX26.2.sdk.tar.bz2
server/: Cargo.toml  Cross.toml
server/crates/sc-agent/: Cargo.toml  build.rs  chat_window.py
server/crates/sc-agent/assets/: icon.icns
server/crates/sc-agent/scripts/: sc_capture_thumbnail.py
server/crates/sc-agent/src/: audio.rs  chat.rs  clipboard.rs  command.rs  connection.rs  consent.rs  cursor.rs  encoder.rs  ffmpeg.rs  filebrowser.rs  host_commands.rs  input.rs  main.rs  screen.rs  service.rs  setup.rs  sysinfo_collector.rs  terminal.rs  updater.rs
server/crates/sc-common/: Cargo.toml
server/crates/sc-common/src/: config.rs  error.rs  lib.rs
server/crates/sc-protocol/: Cargo.toml  build.rs
server/crates/sc-protocol/src/: lib.rs
server/crates/sc-relay/: Cargo.toml
server/crates/sc-relay/src/: main.rs
server/crates/sc-server/: Cargo.toml
server/crates/sc-server/src/: main.rs
server/crates/sc-server/src/api/: agents.rs  api_keys.rs  audit.rs  auth.rs  downloads.rs  groups.rs  health.rs  installer.rs  middleware.rs  mod.rs  schedules.rs  scripts.rs  sessions.rs  settings.rs  stats.rs  update_check.rs  update_policy.rs  users.rs
server/crates/sc-server/src/db/: mod.rs
server/crates/sc-server/src/services/: agent_manifest.rs  mod.rs  pubsub.rs  redis_services.rs  s3.rs
server/crates/sc-server/src/workers/: audit_pruner.rs  heartbeat_monitor.rs  mod.rs  session_cleanup.rs
server/crates/sc-server/src/ws/: events.rs  handler.rs  mod.rs  registry.rs
server/crates/sc-viewer/: Cargo.toml
server/crates/sc-viewer/src/: audio.rs  clipboard.rs  connection.rs  decoder.rs  input.rs  main.rs  session.rs
server/cross/: aarch64-unknown-linux-gnu.Dockerfile
server/migrations/: 20260213000001_initial_schema.sql  20260214000001_agent_groups.sql  20260214000002_scripts_schedules.sql  20260214000003_settings_apikeys.sql  20260215000001_agent_groups_unique_name.sql  20260215000002_chat_messages.sql  20260216000001_agent_updates_instance.sql  20260216000002_update_policy.sql
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  index.css
viewer/src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
viewer/src-tauri/src/: lib.rs  main.rs
viewer/src/components/: DesktopViewer.tsx
viewer/src/lib/: h264-worker.ts  mse-h264-decoder.ts  proto.ts  wasm-h264-decoder.ts
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/app/admin/: layout.tsx
web/src/app/admin/audit/: page.tsx
web/src/app/admin/branding/: page.tsx
web/src/app/admin/extensions/: page.tsx
web/src/app/admin/licensing/: page.tsx
web/src/app/admin/security/: page.tsx
web/src/app/admin/settings/: page.tsx
web/src/app/admin/system/: page.tsx
web/src/app/admin/users/: page.tsx
web/src/app/agents/: loading.tsx  page.tsx
web/src/app/agents/[id]/: loading.tsx  page.tsx
web/src/app/desktop/: page.tsx
web/src/app/desktop/[sessionId]/: page.tsx
web/src/app/files/: page.tsx
web/src/app/groups/: page.tsx
web/src/app/login/: layout.tsx  page.tsx
web/src/app/map/: loading.tsx  page.tsx
web/src/app/notifications/: loading.tsx  page.tsx
web/src/app/profile/: page.tsx
web/src/app/replay/: page.tsx
web/src/app/reports/: page.tsx
web/src/app/schedules/: page.tsx
web/src/app/sessions/: page.tsx
web/src/app/terminal/: page.tsx
web/src/app/terminal/[sessionId]/: page.tsx
web/src/app/toolbox/: page.tsx
web/src/components/: action-center.tsx  agent-detail.tsx  app-shell.tsx  auth-provider.tsx  breadcrumb.tsx  build-installer-dialog.tsx  chat-panel.tsx  command-palette.tsx  desktop-viewer.tsx  empty-state.tsx  file-manager.tsx  keyboard-shortcuts.tsx  machine-list.tsx  notification-center.tsx  onboarding.tsx  session-groups.tsx  sidebar.tsx  skeleton.tsx  terminal.tsx  toast.tsx
web/src/lib/: api.ts  auth-store.ts  proto.ts  session-launcher.ts  urls.ts  use-agent-socket.ts  use-agent-status.ts  use-terminal-socket.ts
