[package]
name = "sc-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sc-agent"
path = "src/main.rs"

[dependencies]
sc-protocol = { workspace = true }
sc-common = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
portable-pty = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
dirs = "6"
libc = "0.2"
arboard = "3"

# Embedded WebView chat window (ScreenConnect-style)
tao = "0.31"
wry = "0.46"

# Input injection (cross-platform)
enigo = { version = "0.2", default-features = false, features = ["serde", "x11rb"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# JPEG encoding for screen capture frames (macOS/Windows use raw pixel buffers)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Screen capture (platform-specific)
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1.5", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1"
windows-service = "0.7"
