[package]
name = "sc-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sc-server"
path = "src/main.rs"

[dependencies]
sc-protocol = { workspace = true }
sc-common = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
futures-util = "0.3"
dashmap = "6"
prost = { workspace = true }
sha2 = "0.10"
hex = "0.4"
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
